--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="promo">
         <div class="container">
-            <div class="header">
+            <header class="header">
                 <a href="#" class="header__logo">
                     <img src="icons/logo.png" alt="logo">
                 </a>
@@ -22,11 +22,12 @@
                     Официальный представитель
                     <span>Garmin, Polar, Suunto</span>
                 </div>
-                <div class="header__contracts">
+                <div class="header__contacts">
                     <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
                     <button class="button">заказать звонок</button>
                 </div>
-            </div>
+            </header>
+
         </div>
     </div>
 
