--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,49 @@
                     <button class="button">заказать звонок</button>
                 </div>
             </header>
+            <div class="promo__wrapper">
+                <h1 class="promo__header">Подбор пульсометра</h1>
+                <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
+                <div class="promo__icons">
+                    <div class="promo__icon">
+                        <img src="icons/main/timer.png" alt="timer"> Время подбора: 10 минут
+                    </div>
+                    <div class="promo__icon">
+                        <img src="icons/main/hand-cart.png" alt="hand-cart"> Бесплатная доставка
+                    </div>
+                    <div class="promo__icon">
+                        <img src="icons/main/messages.png" alt="messages"> Ответимна все вопросы
+                    </div>
+                </div>
+                <button class="button button_main">заказать консультацию</button>
+                <div class="promo__link">
+                    или
+                    <a href="#">перейти в каталог</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <div class="advantages">
+        <div class="container">
+            <h1 class="advantages__header">НАШИ ПРЕИМУЩЕСТВА</h1>
+            <div class="advantages__wrapper">
+                <div class="advantages__icon">
+                    <img src="icons/advatages/cup.png" alt="cup">
+                    <h2 class="advantages__subheader">Делимся опытом</h2>
+                    Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
+                </div>
+                <div class="advantages__icon">
+                    <img src="icons/advatages/heart.png" alt="heart">
+                    <h2 class="advantages__subheader">Заботимся о здоровье</h2>
+                    Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
+                </div>
+                <div class="advantages__icon">
+                    <img src="icons/advatages/shoe.png" alt="shoe">
+                    <h2 class="advantages__subheader">Учим бегать</h2>
+                    Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING</a>.
+                </div>
+            </div>
         </div>
     </div>
 
